...
									  preferredStyle: .alert)
		let action = UIAlertAction(title: model.buttonText, style: .default) { [weak self] _ in
			guard let self = self else { return }
			self.presenter?.didAlertButtonPressed()
		}
		alert.addAction(action)
		alert.view.accessibilityIdentifier = "GameResults" //ДЛЯ ТЕСТОВ__
		present(alert, animated: true, completion: nil)
	}

	func toggleButtons () { // выключатель кнопок
		noButton.isEnabled.toggle()
		yesButton.isEnabled.toggle()
...
